# aoc2022

./: LICENSE  README.md
01/src/: main.rs
02/src/: main.rs  part1.rs
03/src/: main.rs  part1.rs
04/: Cargo.toml
04/src/: main.rs
05/: Cargo.toml
05/src/: main.rs
06/src/: main.rs  part1.rs
07/: Cargo.toml
07/src/: main.rs  part1.rs
08/: Cargo.toml
08/src/: main.rs
09/: Cargo.toml
09/src/: main.rs  part1.rs
10/: Cargo.toml
10/src/: main.rs
11/: Cargo.toml
11/src/: main.rs  part1.rs
12/: Cargo.toml
12/src/: main.rs
13/: Cargo.toml
13/src/: main.rs  part1.rs
14/: Cargo.toml
14/src/: main.rs  part1.rs
15/: Cargo.toml
15/src/: main.rs  part1.rs
16/: Cargo.toml
16/src/: main.rs  part1.rs
17/: Cargo.toml
17/src/: main.rs  part1.rs
18/: Cargo.toml
18/src/: main.rs  part1.rs
19/: Cargo.toml
19/src/: main.rs
20/: Cargo.toml
20/src/: main.rs  part1.rs
21/: Cargo.toml
21/src/: main.rs  part1.rs
22/: Cargo.toml
22/src/: main.rs  part1.rs
23/: Cargo.toml
23/src/: main.rs  part1.rs
24/: Cargo.toml
24/src/: main.rs
25/: Cargo.toml
25/src/: main.rs
