[package]
name = "aoc19"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.2"
clap = { version = "4.0.32", features = ["derive"] }
itertools = "0.10.5"
nom = "7.1.1"
nom-supreme = "0.8.0"
num = "0.4.0"
strum = { version = "0.24.1", features = ["derive"] }
