[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.0", features = ["derive"] }
itertools = "0.10.5"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
strum = { version = "0.24.1", features = ["strum_macros", "derive"] }
