[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
nom = "7.1.3"
nom_locate = "4.0.0"
strum = { version = "0.24.1", features = ["strum_macros", "derive"] }
